[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyper-raman"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "Henry Towbin", email = "24940778+whtowbin@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "xarray", "pandas", "numpy", "scipy", "matplotlib", "scikit-image", "numba"
]

[project.urls]
Documentation = "https://github.com/unknown/hyper-raman#readme"
Issues = "https://github.com/unknown/hyper-raman/issues"
Source = "https://github.com/unknown/hyper-raman"

[tool.hatch.version]
path = "src/hyper_raman/__about__.py"

[tool.hatch.envs.default]
type = "virtual"
installer = "uv"
python = "[3.13]"

dependencies = [
  "xarray", "pandas", "numpy", "scipy", "matplotlib", "scikit-image", "numba"
]


